--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snowdrop-test-client",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@iconify-icons/dashicons": "^1.2.4",
+    "@iconify/react": "^5.0.1",
+    "@table-library/react-table-library": "^4.1.7",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5",
+    "unplugin-icons": "^0.19.0"
   }
 }
